--- a/404.html
+++ b/404.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="refresh" content="0;url=./index.html" />
+  </head>
+  <body></body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   
@@ -45,4 +54,4 @@
   </head>
   <body>
   </body>
-</html>
+</html> -->
